kinda done with all the api stuff
